[gd_scene load_steps=19 format=2]

[ext_resource path="res://Src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/nbSplash.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Slider/SliderTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Menu/CountryFlagsHover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/CountryFlags.png" type="Texture" id=5]
[ext_resource path="res://Src/Menu/MenuLevelSelectionTile.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/MenuFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Src/Menu/DevLogViewer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/DevLog_Mono16.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/Fonts/default_font.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Fonts/DevLog_Bold16.tres" type="DynamicFont" id=11]
[ext_resource path="res://Src/Menu/TabContainer.tres" type="Theme" id=13]
[ext_resource path="res://Src/Hud/DefaultButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://Src/Menu/ScrollBarTheme.tres" type="Theme" id=15]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_right = 16.0
bg_color = Color( 0.580392, 0.690196, 0.760784, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.580392, 0.690196, 0.760784, 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" parent="Main" instance=ExtResource( 14 )]
margin_left = 8.0
margin_top = 136.0
margin_right = 96.0
margin_bottom = 157.0
text = "M_PLAY"

[node name="ButtonSettings" parent="Main" instance=ExtResource( 14 )]
margin_left = 116.0
margin_top = 136.0
margin_right = 204.0
margin_bottom = 157.0
text = "M_SETTINGS"

[node name="ButtonExit" parent="Main" instance=ExtResource( 14 )]
margin_left = 224.0
margin_top = 136.0
margin_right = 312.0
margin_bottom = 157.0
text = "M_EXIT"

[node name="ButtonLanguage" type="TextureButton" parent="Main"]
margin_left = 288.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 24.0
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Main/ButtonLanguage"]
show_behind_parent = true
texture = ExtResource( 5 )
centered = false
hframes = 3

[node name="Copyright" type="RichTextLabel" parent="Main"]
margin_left = -8.0
margin_top = 163.0
margin_right = 328.0
margin_bottom = 184.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]©2021 by NimbleBeasts [color=#41a6f6]`[/color]NimbleBeasts[/center]"
text = "©2021 by NimbleBeasts `NimbleBeasts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="LevelSelection" instance=ExtResource( 14 )]
margin_left = 56.0
margin_top = 144.0
margin_right = 152.0
margin_bottom = 163.0
text = "M_BACK"

[node name="PastButton" parent="LevelSelection" instance=ExtResource( 14 )]
margin_left = 32.0
margin_top = 80.0
margin_right = 48.0
margin_bottom = 99.0
text = "<"

[node name="SelectionHolder" type="Control" parent="LevelSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionTile1" parent="LevelSelection/SelectionHolder" instance=ExtResource( 6 )]
margin_left = 56.0
margin_top = 56.0
margin_right = 120.0
margin_bottom = 120.0

[node name="SelectionTile2" parent="LevelSelection/SelectionHolder" instance=ExtResource( 6 )]
margin_left = 128.0
margin_top = 56.0
margin_right = 192.0
margin_bottom = 120.0

[node name="SelectionTile3" parent="LevelSelection/SelectionHolder" instance=ExtResource( 6 )]
margin_left = 200.0
margin_top = 56.0
margin_right = 264.0
margin_bottom = 120.0

[node name="NextButton" parent="LevelSelection" instance=ExtResource( 14 )]
margin_left = 272.0
margin_top = 80.0
margin_right = 288.0
margin_bottom = 99.0
text = ">"

[node name="ResetButton" parent="LevelSelection" instance=ExtResource( 14 )]
margin_left = 160.0
margin_top = 144.0
margin_right = 264.0
margin_bottom = 163.0
text = "M_RESET"

[node name="ResetWindow" type="Control" parent="LevelSelection"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BgOverlay" type="ColorRect" parent="LevelSelection/ResetWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.0862745, 0.0941176, 0.784314 )

[node name="WindowBg" type="ColorRect" parent="LevelSelection/ResetWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 64.0
margin_right = -48.0
margin_bottom = -44.0
color = Color( 0.109804, 0.0862745, 0.0941176, 1 )

[node name="ResetBackButton" parent="LevelSelection/ResetWindow" instance=ExtResource( 14 )]
margin_left = 56.0
margin_top = 112.0
margin_right = 152.0
margin_bottom = 131.0
text = "M_BACK"

[node name="ResetDeleteButton" parent="LevelSelection/ResetWindow" instance=ExtResource( 14 )]
margin_left = 168.0
margin_top = 112.0
margin_right = 264.0
margin_bottom = 131.0
text = "M_DELETE"

[node name="WarningLabel" type="RichTextLabel" parent="LevelSelection/ResetWindow"]
margin_left = 56.0
margin_top = 72.0
margin_right = 264.0
margin_bottom = 112.0
bbcode_enabled = true
bbcode_text = "M_DELETE_WARNING"
text = "M_DELETE_WARNING"
scroll_active = false

[node name="Settings" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="Settings"]
margin_right = 320.0
margin_bottom = 184.0
theme = ExtResource( 13 )
custom_constants/side_margin = 0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Tabs" parent="Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 26.0

[node name="DevLogViewer" parent="Settings/TabContainer/General" instance=ExtResource( 8 )]
margin_left = 8.0
margin_top = 3.0
margin_right = -8.0
margin_bottom = -40.0
theme = ExtResource( 15 )
custom_fonts/mono_font = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 10 )

[node name="BrightnessSlider" type="HSlider" parent="Settings/TabContainer/General"]
visible = false
margin_left = 80.0
margin_top = 179.0
margin_right = 200.0
margin_bottom = 195.0
theme = ExtResource( 3 )
min_value = 0.75
max_value = 1.25
step = 0.05
value = 1.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/General/BrightnessSlider"]
margin_left = -72.0
margin_right = -9.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "Brightness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/TabContainer/General/BrightnessSlider"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "1.00"

[node name="ContrastSlider" type="HSlider" parent="Settings/TabContainer/General"]
visible = false
margin_left = 80.0
margin_top = 213.0
margin_right = 200.0
margin_bottom = 229.0
theme = ExtResource( 3 )
min_value = 0.75
max_value = 1.25
step = 0.05
value = 1.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/General/ContrastSlider"]
margin_left = -72.0
margin_right = -9.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "Contrast"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/TabContainer/General/ContrastSlider"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "1.00"

[node name="Graphics" type="Tabs" parent="Settings/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 26.0

[node name="FullscreenButton" parent="Settings/TabContainer/Graphics" instance=ExtResource( 14 )]
margin_left = 240.0
margin_top = 14.0
margin_right = 312.0
margin_bottom = 35.0
text = "M_OFF"

[node name="Label" type="Label" parent="Settings/TabContainer/Graphics/FullscreenButton"]
margin_left = -232.0
margin_right = -168.0
margin_bottom = 18.0
text = "M_FULLSCREEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionList" type="ItemList" parent="Settings/TabContainer/Graphics"]
margin_left = 8.0
margin_top = 38.0
margin_right = 312.0
margin_bottom = 123.0
theme = ExtResource( 15 )
custom_styles/selected_focus = SubResource( 4 )
custom_styles/bg_focus = SubResource( 5 )
custom_styles/selected = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" parent="Settings/TabContainer/Graphics" instance=ExtResource( 14 )]
margin_left = 216.0
margin_top = 126.0
margin_right = 312.0
margin_bottom = 147.0
text = "M_APPLY"

[node name="Sounds" type="Tabs" parent="Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 26.0

[node name="SoundSlider" type="HSlider" parent="Settings/TabContainer/Sounds"]
margin_left = 80.0
margin_top = 16.0
margin_right = 200.0
margin_bottom = 32.0
theme = ExtResource( 3 )
max_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/Sounds/SoundSlider"]
margin_left = -72.0
margin_top = -2.0
margin_right = -9.0
margin_bottom = 16.0
text = "M_SOUND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/TabContainer/Sounds/SoundSlider"]
margin_left = 128.0
margin_top = -2.0
margin_right = 160.0
margin_bottom = 16.0
text = "100%"

[node name="MusicSlider" type="HSlider" parent="Settings/TabContainer/Sounds"]
margin_left = 80.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 66.0
theme = ExtResource( 3 )
max_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/Sounds/MusicSlider"]
margin_left = -72.0
margin_top = -2.0
margin_right = -9.0
margin_bottom = 16.0
text = "M_MUSIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/TabContainer/Sounds/MusicSlider"]
margin_left = 128.0
margin_top = -2.0
margin_right = 160.0
margin_bottom = 16.0
text = "100%"

[node name="BackButton" parent="Settings" instance=ExtResource( 14 )]
margin_left = 8.0
margin_top = 152.0
margin_right = 104.0
margin_bottom = 173.0
text = "M_BACK"

[node name="Version" type="RichTextLabel" parent="."]
margin_left = 328.0
margin_right = 388.0
margin_bottom = 16.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[right]Version[/right]"
text = "Version"

[connection signal="button_up" from="Main/ButtonPlay" to="." method="_on_ButtonPlay_button_up"]
[connection signal="button_up" from="Main/ButtonSettings" to="." method="_on_ButtonSettings_button_up"]
[connection signal="button_up" from="Main/ButtonExit" to="." method="_on_ButtonExit_button_up"]
[connection signal="button_up" from="Main/ButtonLanguage" to="." method="_on_ButtonLanguage_button_up"]
[connection signal="button_up" from="LevelSelection/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="LevelSelection/PastButton" to="." method="_on_PastButton_button_up"]
[connection signal="button_up" from="LevelSelection/SelectionHolder/SelectionTile1" to="." method="_on_SelectionTile1_button_up"]
[connection signal="button_up" from="LevelSelection/SelectionHolder/SelectionTile2" to="." method="_on_SelectionTile2_button_up"]
[connection signal="button_up" from="LevelSelection/SelectionHolder/SelectionTile3" to="." method="_on_SelectionTile3_button_up"]
[connection signal="button_up" from="LevelSelection/NextButton" to="." method="_on_NextButton_button_up"]
[connection signal="button_up" from="LevelSelection/ResetButton" to="." method="_on_ResetButton_button_up"]
[connection signal="button_up" from="LevelSelection/ResetWindow/ResetBackButton" to="." method="_on_ResetBackButton_button_up"]
[connection signal="button_up" from="LevelSelection/ResetWindow/ResetDeleteButton" to="." method="_on_ResetDeleteButton_button_up"]
[connection signal="value_changed" from="Settings/TabContainer/General/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="Settings/TabContainer/General/ContrastSlider" to="." method="_on_ContrastSlider_value_changed"]
[connection signal="button_up" from="Settings/TabContainer/Graphics/FullscreenButton" to="." method="_on_FullscreenButton_button_up"]
[connection signal="button_up" from="Settings/TabContainer/Graphics/ApplyButton" to="." method="_on_ApplyButton_button_up"]
[connection signal="value_changed" from="Settings/TabContainer/Sounds/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Settings/TabContainer/Sounds/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="button_up" from="Settings/BackButton" to="." method="_on_BackButton_button_up"]
